--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -39,7 +39,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+  <link rel="icon" href="{{Icon}}"/>
 
   <title>{{Title}}</title>
   <link rel="manifest" href="manifest.json">
