--- a/web/index.html
+++ b/web/index.html
@@ -1,10 +1,34 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Memento</title>
+    <base href="/">
+
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="{{Description}}">
+
+    <!-- SEO meta -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{{Title}}">
+    <meta name="twitter:description" content="{{Description}}">
+    <meta name="twitter:image" content="{{Preview}}">
+    <meta property="og:title" content="{{Title}}">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{Url}}">
+    <meta property="og:image" content="{{Preview}}">
+    <meta property="og:description" content="{{Description}}">
+    <meta property="og:site_name" content="{{SiteName}}">
+
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="{{SiteName}}">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+    <!-- Favicon -->
+    <link rel="icon" href="{{Icon}}"/>
+
+    <title>{{Title}}</title>
   </head>
   <body>
     <div id="root"></div>
