--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,10 @@
     <title>{{Title}}</title>
   </head>
   <body>
+    <!-- SEO article -->
+    <div style="display:none">
+      <!-- SEO article Body-->
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
