--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description" content="{{Description}}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- SEO meta -->
     <meta name="twitter:card" content="summary_large_image">
